[project]
name = "trustlayer"
version = "0.1.0"
description = "TrustLayer MVP backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.2,<6.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.35,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
]

[tool.pytest.ini_options]
markers = [
  "db: tests that require DATABASE_URL and migrated tables",
]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
